<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/homeToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/design_default_color_primary_dark"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="PERSONAGEM" />

    <ImageView
        android:id="@+id/imageLuffy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/luffy"
        tools:layout_editor_absoluteX="55dp"
        tools:layout_editor_absoluteY="105dp"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/luffy1" />

    <TextView
        android:id="@+id/personaName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/persona_name_luffy_label"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageLuffy"
        app:layout_constraintBottom_toStartOf="@id/personaPost"
        />

    <TextView
        android:id="@+id/personaPost"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        android:text="@string/persona_post_text_label"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toStartOf="@id/personaPower"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/personaName" />

    <TextView
        android:id="@+id/personaPower"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        android:text="@string/persona_power_text_label"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/personaPost" />

</androidx.constraintlayout.widget.ConstraintLayout>
